CSS343/Assignment1/output.txt
Mon Apr  8 08:10:47 UTC 2024
Linux linuxlab 6.5.13-3-pve #1 SMP PREEMPT_DYNAMIC PMX 6.5.13-3 (2024-03-20T10:45Z) x86_64 x86_64 x86_64 GNU/Linux
uid=0(root) gid=0(root) groups=0(root)
=====================================================
1. Compiles without warnings with -Wall -Wextra flags
=====================================================
main.cpp: In function 'int main(int, char**)':
main.cpp:18:14: warning: unused parameter 'argc' [-Wunused-parameter]
   18 | int main(int argc, char* argv[]) {
      |          ~~~~^~~~
=====================================================
2. Runs and produces correct output
=====================================================
4 | ./a.out patients.txt
=====================================================
3. clang-tidy warnings are fixed
=====================================================
51452 warnings generated.
95055 warnings generated.
127747 warnings generated.
/home/kbricks/CSS343/Assignment1/main.cpp:18:14: error: parameter 'argc' is unused [misc-unused-parameters,-warnings-as-errors]
int main(int argc, char* argv[]) {
             ^~~~
              /*argc*/
Suppressed 127746 warnings (127746 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
1 warning treated as error
=====================================================
4. clang-format does not find any formatting issues
=====================================================
WARNING: clang-format not available
=====================================================
5. No memory leaks using g++
=====================================================
=====================================================
6. No memory leaks using valgrind, look for "definitely lost" 
=====================================================
==21281== Memcheck, a memory error detector
==21281== Copyright (C) 2002-2022, and GNU GPL'd, by Julian Seward et al.
==21281== Using Valgrind-3.21.0 and LibVEX; rerun with -h for copyright info
==21281== Command: echo 4 | ./a.out patients.txt
==21281== Parent PID: 21191
==21281== 
==21281== 
==21281== HEAP SUMMARY:
==21281==     in use at exit: 0 bytes in 0 blocks
==21281==   total heap usage: 39 allocs, 39 frees, 15,017 bytes allocated
==21281== 
==21281== All heap blocks were freed -- no leaks are possible
==21281== 
==21281== For lists of detected and suppressed errors, rerun with: -s
==21281== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
=====================================================
7. Tests have full code coverage
=====================================================
ERROR: check-code-coverage.sh: Failed to create default.profraw data
Mon Apr  8 08:11:07 UTC 2024
=====================================================
To create an output.txt file with all the output from this script
Run the below command
      ./create-output.sh > output.txt 2>&1 
=====================================================
